# bioc-processor

./: .gitignore  HPC_README.md  bioc_processor.def  lib_test.py  odinson_indexer.def  process_bioc.py  submit_bioc_array.sh  submit_bioc_array_auto.sh  submit_chunks.sh  submit_odinson_bulk_index.sh  submit_odinson_filtered_index.sh  submit_odinson_index.sh  submit_odinson_parallel_index.sh
bioc-converter/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bioc-converter/src/bioc_converter/: __init__.py  __version__.py  converter.py  loader.py  metadata.py  models.py  processor.py  sections.py  sentence.py  utils.py
bioc-converter/src/bioc_converter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bioc-converter/tests/: __init__.py  test_converter.py  test_processor.py
bioc-converter/tests/test_data/: sample.bioc.xml
clu-bridge/clu/bridge/: odinson.py  processors.py  spacy.py
