[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioc-converter"
version = "0.1.0"
description = "Convert BioC XML documents to Odinson JSON format"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "BioCProcessor Team"}
]
keywords = ["bioc", "odinson", "nlp", "biomedical", "text-mining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.8"
dependencies = [
    "bioc>=2.1.0",
    "spacy>=3.0.0",
    "pydantic>=1.8.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
scispacy = [
    "scispacy>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/your-org/bioc-converter"
Documentation = "https://github.com/your-org/bioc-converter#readme"
Repository = "https://github.com/your-org/bioc-converter"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bioc_converter = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

